hphp/hack/test/typecheck/let/let_always_execute_block.php.exp
File "let_always_execute_block.php", line 11, characters 8-8:
Unbound name: y (a global constant) (Naming[2049])
