hphp/hack/test/typecheck/let/let_always_execute_block.php
<?hh // experimental

function foo(): void {
  let x : int = 42;
  {
    let y : int = -1;
    echo x; // 42
    echo y; // -1
  }
  echo x; // 42
  echo y; // error
}
